# qt_LedControl

./: CMakeLists.txt  README.md  build_and_run.sh  main.cpp  main.qml  serialreader.cpp  serialreader.h
ESP32_WROVER_Led/: platformio.ini
ESP32_WROVER_Led/src/: main.cpp
